alterações no código

--- a/joao-victor.html
+++ b/joao-victor.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
+<html lang="pt-br">
+
 <head>
-	<title></title>
+	<title>João Victor</title> 
 </head>
+
 <body>
-Olá, sou joão victor
+	<P>Olá, sou João Victor</P>
 </body>
+
 </html>
