alteração do código em negrito
alteração do código com link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-br">
 
 <head>
-	<title>João Victor</title> 
+	<title>João Victor</title>
+	<a href="Victor.html"a></a>
+	<a href= "https://www.google.com.br"a></a>
 </head>
 
 <body>
